Update mutateFinals/modules test to exercise exports and opens cases